refactor: Prefer `String#formatted(Object...)` (#10787)
Use this link to re-run the recipe: https://app.moderne.io/recipes/org.openrewrite.java.migrate.lang.StringFormatted?organizationId=SmFiUmVm

Co-authored-by: Moderne <team@moderne.io>