@@ -444,7 +444,7 @@ class OOBibStyleGetCitationMarker {
 
             final boolean isUnresolved = entry.getLookupResult().isEmpty();
             if (isUnresolved) {
-                stringBuilder.append(String.format("Unresolved(%s)", entry.getCitationKey()));
+                stringBuilder.append("Unresolved(%s)".formatted(entry.getCitationKey()));
                 if (purpose != AuthorYearMarkerPurpose.NORMALIZED) {
                     stringBuilder.append(pageInfoPart);
                 }
